fix: refix hidden scrollbar issue

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -35,7 +35,8 @@ html{
 
 html, body {
   min-height: 100%;
-  min-width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -50,7 +51,7 @@ footer {
   color: var(--text);
   display: flex;
   justify-content: center;
-  width: 100vw;
+  width: 100%;
   padding: 8px 0;
 }
 
